// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PingTest / Ping Fetches and updates state if button is clicked 1`] = `
<div
  className="View__View-jelnfZ bnYeJt"
>
  <h1
    className="Title__Title-lbDhID gxinMP"
  >
    Connection testing field
  </h1>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
  </p>
  <button
    className="Button__Button-jkHDFw hKMOLu"
    onClick={[Function]}
  >
    Click to ping
  </button>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    Pinged with user 
    Yoda
  </p>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    The whole opperatiorn took 
    Time string
  </p>
</div>
`;

exports[`PingTest / Ping Matches previous setup 1`] = `
<div
  className="View__View-jelnfZ bnYeJt"
>
  <h1
    className="Title__Title-lbDhID gxinMP"
  >
    Connection testing field
  </h1>
  <p
    className="Text__Text-jpiXUO hvuOVR"
  >
    This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
  </p>
  <button
    className="Button__Button-jkHDFw hKMOLu"
    onClick={[Function]}
  >
    Click to ping
  </button>
</div>
`;
